--- a/themes/PaperMod/layouts/partials/home_info.html
+++ b/themes/PaperMod/layouts/partials/home_info.html
@@ -1,7 +1,11 @@
 {{- with site.Params.homeInfoParams }}
 <article class="first-entry home-info">
     <header class="entry-header">
-        <h1>{{ .Title | markdownify }}</h1>
+        <div class="header-content">
+            <img draggable="false" src="{{ .imageUrl | absURL }}" alt="{{ .title }}" title="{{ .title }}"
+                height="{{ .imageHeight | default 120 }}" width="{{ .imageWidth | default 120 }}" />
+            <h1>{{ .Title | markdownify }}</h1>
+        </div>
     </header>
     <div class="entry-content">
         {{ .Content | markdownify }}
@@ -11,3 +15,14 @@
     </footer>
 </article>
 {{- end -}}
+
+<style>
+.header-content {
+    display: flex;
+    align-items: center;
+    align-items: flex-end;
+}
+.header-content img {
+    margin-right: 10px; 
+}
+</style>
